fix(pages): update project URL in HomepageGuide component and remove gap in header styles

--- a/src/components/HomepageFirstScreen/styles.module.scss
+++ b/src/components/HomepageFirstScreen/styles.module.scss
@@ -147,7 +147,6 @@
 
 .header {
   display: grid;
-  gap: 8px;
   padding: 0 30px;
   align-items: center;
   justify-items: center;
